# thumbd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  compose.yml
.github/workflows/: ci.yml  publish.yml
client/: Cargo.toml  README.md  build.rs
client/src/: main.rs
proto/: thumbd.proto
server/: Cargo.toml
server/src/: convert.rs  main.rs  service.rs
