[package]
name    = "thumbd-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic   = { version = "0.12", features = ["transport"] }
prost   = "0.13"
tokio   = { version = "1", features = ["full"] }
clap    = { version = "4", features = ["derive"] }
tower      = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
